Many of the end points implement real queries, not all work
